# AWS_SSO_SignIn

./: README.md  pyproject.toml
aws_signin/: SignIn.py
